--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <title>Nelson Andr&eacute;s S&aacute;nchez Ot&aacute;lora - Personal Page</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="node_modules/bootstrap/dist/css/one-page-wonder.css" rel="stylesheet">
+    <!--<link href="node_modules/bootstrap/dist/css/one-page-wonder.css" rel="stylesheet">-->
+    <link href="css/one-page-wonder.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -112,14 +114,20 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
 
-    <!-- Third Featurette -->
+    <hr class="featurette-divider">
+
+    <!-- Second Featurette -->
     <div class="featurette" id="skills">
-        <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-        <h2 class="featurette-heading">Mis habilidades
-            <span class="text-muted">Will Seal the Deal.</span>
+        <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+        <h2 class="featurette-heading">Mis Habilidades
+            <span class="text-muted">Is Pretty Cool Too.</span>
         </h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
+
+    <hr class="featurette-divider">
+
+
 
     <!-- Third Featurette -->
     <div class="featurette" id="hobbies">
@@ -136,7 +144,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
+                <p>Copyright &copy; Programaci&oacute;n con tecnolog&iacute;as Web - 2015</p>
             </div>
         </div>
     </footer>
