Commit con imagenes

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                     <a href="#about">About Me</a>
                 </li>
                 <li>
-                    <a href="#services">Informaci&oacute;n</a>
-                </li>
-                <li>
-                    <a href="#contact">Educaci&oacute;n</a>
+                    <a href="#edu">Educaci&oacute;n</a>
                 </li>
                 <li>
                     <a href="#skills">Habilidades</a>
                 </li>
                 <li>
                     <a href="#hobbies">Hobbies</a>
+                </li>
+                <li>
+                    <a href="#info">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -85,20 +85,10 @@
 
     <!-- First Featurette -->
     <div class="featurette" id="about">
-        <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-        <h2 class="featurette-heading">This First Heading
-            <span class="text-muted">Will Catch Your Eye</span>
-        </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <!-- Second Featurette -->
-    <div class="featurette" id="services">
-        <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-        <h2 class="featurette-heading">The Second Heading
-            <span class="text-muted">Is Pretty Cool Too.</span>
+        <!--<img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">-->
+        <img class="featurette-image img-circle img-responsive pull-right" src="img/imag02.png">
+        <h2 class="featurette-heading">Acerca de
+            <span class="text-muted">Nelson Andr&eacute;s S&aacute;nchez</span>
         </h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
@@ -106,10 +96,10 @@
     <hr class="featurette-divider">
 
     <!-- Third Featurette -->
-    <div class="featurette" id="contact">
-        <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-        <h2 class="featurette-heading">The Third Heading
-            <span class="text-muted">Will Seal the Deal.</span>
+    <div class="featurette" id="edu">
+        <img class="featurette-image img-circle img-responsive pull-left" src="img/14924-NPVJ3S.jpg">
+        <h2 class="featurette-heading">Mis
+            <span class="text-muted">Estudios.</span>
         </h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
@@ -118,9 +108,9 @@
 
     <!-- Second Featurette -->
     <div class="featurette" id="skills">
-        <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
-        <h2 class="featurette-heading">Mis Habilidades
-            <span class="text-muted">Is Pretty Cool Too.</span>
+        <img class="featurette-image img-circle img-responsive pull-right" src="img/08.jpg">
+        <h2 class="featurette-heading">Mis
+            <span class="text-muted">Habilidades.</span>
         </h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
@@ -131,9 +121,21 @@
 
     <!-- Third Featurette -->
     <div class="featurette" id="hobbies">
-        <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-        <h2 class="featurette-heading">Mis pasatiempos
-            <span class="text-muted">Will Seal the Deal.</span>
+        <img class="featurette-image img-circle img-responsive pull-left" src="img/imag01.png">
+        <h2 class="featurette-heading">Mis
+            <span class="text-muted">Hobbies.</span>
+        </h2>
+        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <!-- Second Featurette -->
+    <div class="featurette" id="info">
+        <img class="featurette-image img-circle img-responsive pull-right" src="img/09.jpg">
+        <h2 class="featurette-heading">
+            <span class="text-muted">Informaci&oacute;n</span>
+            de contacto.
         </h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
@@ -144,7 +146,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Programaci&oacute;n con tecnolog&iacute;as Web - 2015</p>
+                <p>Programaci&oacute;n con tecnolog&iacute;as Web - 2015</p>
             </div>
         </div>
     </footer>
