Commit con linea de tiempo

--- a/index.html
+++ b/index.html
@@ -81,46 +81,134 @@
 <!-- Page Content -->
 <div class="container">
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="about">
 
     <!-- First Featurette -->
-    <div class="featurette" id="about">
+    <div class="featurette" >
         <!--<img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">-->
         <img class="featurette-image img-circle img-responsive pull-right" src="img/imag02.png">
         <h2 class="featurette-heading">Acerca de
             <span class="text-muted">Nelson Andr&eacute;s S&aacute;nchez</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">Soy un estudiante de Matem&aacute;ticas e Ingenier&iacute;a de Sistemas de la Universidad de los Andes (Colombia). Mis gustos se enfocan en el desarollo de l&oacute;gica y algoritmia en inteligencia artificial y rob&oacute;tica.</p>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="edu">
 
     <!-- Third Featurette -->
-    <div class="featurette" id="edu">
+    <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-left" src="img/14924-NPVJ3S.jpg">
         <h2 class="featurette-heading">Mis
             <span class="text-muted">Estudios.</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">Mis estudios se pueden resumir de la siguiente forma:</p>
+
+
+
+
+
+
+
+
+
+        <ul class="timeline">
+
+
+            <li class="timeline-inverted">
+                <div class="timeline-badge">
+                    <a><i class="fa fa-circle invert" ></i></a>
+                </div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>Talleres de Rob&oacute;tica en Maloka</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p>Mis gustos por la Ingenier&iacute;a de sistemas comenzaro con unos talleres de rob&oacute;tica que tome en Maloka (Bogot&aacute;).</p>
+                    </div>
+                    <div class="timeline-footer">
+                        <p class="text-right">2005</p>
+                    </div>
+                </div>
+            </li>
+
+            <li class="timeline-inverted">
+                <div class="timeline-badge">
+                    <a><i class="fa fa-circle invert" ></i></a>
+                </div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>Bachillerato</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p>A los 16 años, me gradue de bachiller de la Fundaci&oacute;n Instituto Tecnol&oacutegico; del Sur, en ese tiempo, no sab&iacute;a si estudiar Ingenier&iacute;a de Sistemas o Matem&acute;s, por eso decid&iacute; probar ambas.</p>
+                    </div>
+                    <div class="timeline-footer">
+                        <p class="text-right">2011</p>
+                    </div>
+                </div>
+            </li>
+
+            <li class="timeline-inverted">
+                <div class="timeline-badge">
+                    <a><i class="fa fa-circle invert" ></i></a>
+                </div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>Pregrado</h4>
+                    </div>
+                    <div class="timeline-body">
+                        <p>Actualmente, estoy cursando ambos pregrado de Ingenier&iacute;a de Sistemas y Matem&acute;s en la Universidad de los Andes.</p>
+                    </div>
+                    <div class="timeline-footer">
+                        <p class="text-right">Actualidad</p>
+                    </div>
+                </div>
+            </li>
+
+
+            <li class="clearfix no-float"></li>
+        </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="skills">
 
     <!-- Second Featurette -->
-    <div class="featurette" id="skills">
+    <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-right" src="img/08.jpg">
         <h2 class="featurette-heading">Mis
             <span class="text-muted">Habilidades.</span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">Actualmente poseo conocimientos en l&oacute;gica aplicada y conocimientos base en la ter&iacute;a de complejidad computacional, los lenguajes que manejo son:</p>
+        <ul class="lead">
+            <li>Java</li>
+            <li>LaTex</li>
+            <li>Matlab</li>
+            <li>HTML</li>
+            <li>SQL</li>
+        </ul>
+        <p class="lead">Adicionalmente, estoy familiarizado el manejo de programas de la l&iacute;nea de Microsoft Office y Abobe Suit. Y he realizado un trabajo menor en el desarrollo de aplicaciones para Android</p>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="hobbies">
 
 
 
     <!-- Third Featurette -->
-    <div class="featurette" id="hobbies">
+    <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-left" src="img/imag01.png">
         <h2 class="featurette-heading">Mis
             <span class="text-muted">Hobbies.</span>
@@ -128,10 +216,10 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="info">
 
     <!-- Second Featurette -->
-    <div class="featurette" id="info">
+    <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-right" src="img/09.jpg">
         <h2 class="featurette-heading">
             <span class="text-muted">Informaci&oacute;n</span>
