Commit con practicamente listo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#about">About Me</a>
+                    <a href="#about">Con&oacute;ceme</a>
                 </li>
                 <li>
                     <a href="#edu">Educaci&oacute;n</a>
@@ -72,8 +72,8 @@
 <header class="header-image">
     <div class="headline">
         <div class="container">
-            <h1>One Page Wonder</h1>
-            <h2>Will Knock Your Socks Off</h2>
+            <h1>Nelson Andr&eacute;s S&aacute;nchez Ot&aacute;lora</h1>
+            <h2>Personal Page</h2>
         </div>
     </div>
 </header>
@@ -87,10 +87,11 @@
     <div class="featurette" >
         <!--<img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">-->
         <img class="featurette-image img-circle img-responsive pull-right" src="img/imag02.png">
-        <h2 class="featurette-heading">Acerca de
-            <span class="text-muted">Nelson Andr&eacute;s S&aacute;nchez</span>
+        <h2 class="featurette-heading">
+            <span class="text-muted">Acerca de</span>
+            Nelson Andr&eacute;s S&aacute;nchez
         </h2>
-        <p class="lead">Soy un estudiante de Matem&aacute;ticas e Ingenier&iacute;a de Sistemas de la Universidad de los Andes (Colombia). Mis gustos se enfocan en el desarollo de l&oacute;gica y algoritmia en inteligencia artificial y rob&oacute;tica.</p>
+        <p class="lead"  align="justify">Soy un estudiante de Matem&aacute;ticas e Ingenier&iacute;a de Sistemas de la Universidad de los Andes (Colombia). Mis gustos se enfocan en el desarollo de l&oacute;gica y algoritmia en inteligencia artificial y rob&oacute;tica.</p>
     </div>
 
     <hr class="featurette-divider" id="edu">
@@ -98,8 +99,9 @@
     <!-- Third Featurette -->
     <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-left" src="img/14924-NPVJ3S.jpg">
-        <h2 class="featurette-heading">Mis
-            <span class="text-muted">Estudios.</span>
+        <h2 class="featurette-heading">
+            <span class="text-muted">Mis</span>
+            Estudios.
         </h2>
         <p class="lead">Mis estudios se pueden resumir de la siguiente forma:</p>
 
@@ -140,7 +142,7 @@
                         <h4>Bachillerato</h4>
                     </div>
                     <div class="timeline-body">
-                        <p>A los 16 años, me gradue de bachiller de la Fundaci&oacute;n Instituto Tecnol&oacutegico; del Sur, en ese tiempo, no sab&iacute;a si estudiar Ingenier&iacute;a de Sistemas o Matem&acute;s, por eso decid&iacute; probar ambas.</p>
+                        <p>A los 16 años, me gradue de bachiller de la Fundaci&oacute;n Instituto Tecnol&oacute;gico del Sur, en ese tiempo, no sab&iacute;a si estudiar Ingenier&iacute;a de Sistemas o Matem&aacute;ticas, por eso decid&iacute; probar ambas.</p>
                     </div>
                     <div class="timeline-footer">
                         <p class="text-right">2011</p>
@@ -157,7 +159,7 @@
                         <h4>Pregrado</h4>
                     </div>
                     <div class="timeline-body">
-                        <p>Actualmente, estoy cursando ambos pregrado de Ingenier&iacute;a de Sistemas y Matem&acute;s en la Universidad de los Andes.</p>
+                        <p>Actualmente, estoy cursando ambos pregrado de Ingenier&iacute;a de Sistemas y Matem&aacute;ticas en la Universidad de los Andes.</p>
                     </div>
                     <div class="timeline-footer">
                         <p class="text-right">Actualidad</p>
@@ -189,10 +191,11 @@
     <!-- Second Featurette -->
     <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-right" src="img/08.jpg">
-        <h2 class="featurette-heading">Mis
-            <span class="text-muted">Habilidades.</span>
+        <h2 class="featurette-heading">
+            <span class="text-muted">Mis</span>
+            Habilidades.
         </h2>
-        <p class="lead">Actualmente poseo conocimientos en l&oacute;gica aplicada y conocimientos base en la ter&iacute;a de complejidad computacional, los lenguajes que manejo son:</p>
+        <p class="lead" align="justify">Actualmente poseo conocimientos en l&oacute;gica aplicada y conocimientos base en la teor&iacute;a de complejidad computacional.<br> Los lenguajes que manejo son:</p>
         <ul class="lead">
             <li>Java</li>
             <li>LaTex</li>
@@ -200,7 +203,7 @@
             <li>HTML</li>
             <li>SQL</li>
         </ul>
-        <p class="lead">Adicionalmente, estoy familiarizado el manejo de programas de la l&iacute;nea de Microsoft Office y Abobe Suit. Y he realizado un trabajo menor en el desarrollo de aplicaciones para Android</p>
+        <p class="lead" align="justify">Adicionalmente, estoy familiarizado el manejo de programas de la l&iacute;nea de Microsoft Office y Adobe Suit. Y he realizado un trabajo menor en el desarrollo de aplicaciones para Android</p>
     </div>
 
     <hr class="featurette-divider" id="hobbies">
@@ -210,10 +213,20 @@
     <!-- Third Featurette -->
     <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-left" src="img/imag01.png">
-        <h2 class="featurette-heading">Mis
-            <span class="text-muted">Hobbies.</span>
+        <h2 class="featurette-heading">
+            <span class="text-muted">Mis</span>
+            Hobbies.
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+
+        <div class="col-md-6">
+        <ul class="lead">
+            <li  align="justify"><span class="text-muted">Los videojuegos:</span><br> Me gusta jugarlos, también análizar las nuevas propuestas, formas, experiencia, e interfaces interactivas que se le puede ofrecer a un jugador.</li>
+            <li  align="justify"><span class="text-muted">Las artes marciales:</span><br> Me gusta mucho la disciplina y el concepto ofrecido en las artes marciales, me gusta analizar las t&eacute;cnicas y la filosof&iacute;a detras de ellas. Actualmente he practicado algunas t&eacute;cnicas en Karate, Taekwondo, y Kickboxing </li>
+            <li  align="justify"><span class="text-muted">Cine:</span><br> Si bien no es una actividad frecuente en m&iacute;, realmente disfruto ver pel&iacute;cula en compañ&iacute;a de amigos y familiares.</li>
+            <li  align="justify"><span class="text-muted">Robots:</span><br> Desde pequeño, me a llamado mucho esta rama de la ingenier&iacute;a y este gusto se conserva hasta la actualidad.</li>
+        </ul>
+        </div>
+
     </div>
 
     <hr class="featurette-divider" id="info">
@@ -225,7 +238,30 @@
             <span class="text-muted">Informaci&oacute;n</span>
             de contacto.
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+
+
+        <br><br>
+
+        <div class="row">
+            <div class="col-md-1">
+                <p class="lead">Correo:</p>
+                <p class="lead">C&oacute;digo:</p>
+                <p class="lead">Tel&eacute;fono:</p>
+                <p class="lead">Direcci&oacute;n:</p>
+
+
+            </div>
+            <div class="col-md-4">
+                <p class="lead">na.sanchez162@uniandes.edu.co</p>
+                <p class="lead">201216454</p>
+                <p class="lead">3########</p>
+                <p class="lead">Cra ######### (Bogot&aacute;, Colombia)</p>
+
+            </div>
+        </div>
+
+
+
     </div>
 
     <hr class="featurette-divider">
