Commit Page Finalizado

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 <li>
                     <a href="#info">Contacto</a>
                 </li>
+                <li>
+                    <a href="#mario">¡Homenaje Especial!</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -91,7 +94,7 @@
             <span class="text-muted">Acerca de</span>
             Nelson Andr&eacute;s S&aacute;nchez
         </h2>
-        <p class="lead"  align="justify">Soy un estudiante de Matem&aacute;ticas e Ingenier&iacute;a de Sistemas de la Universidad de los Andes (Colombia). Mis gustos se enfocan en el desarollo de l&oacute;gica y algoritmia en inteligencia artificial y rob&oacute;tica.</p>
+        <p class="lead"  align="justify">Soy un estudiante de Matem&aacute;ticas e Ingenier&iacute;a de Sistemas de la Universidad de los Andes (Colombia). Mis gustos se enfocan en el desarollo de la l&oacute;gica y algoritmia en inteligencia artificial y rob&oacute;tica.</p>
     </div>
 
     <hr class="featurette-divider" id="edu">
@@ -125,7 +128,7 @@
                         <h4>Talleres de Rob&oacute;tica en Maloka</h4>
                     </div>
                     <div class="timeline-body">
-                        <p>Mis gustos por la Ingenier&iacute;a de sistemas comenzaro con unos talleres de rob&oacute;tica que tome en Maloka (Bogot&aacute;).</p>
+                        <p>Mis gustos por la Ingenier&iacute;a de Sistemas comenzaron con unos talleres de rob&oacute;tica que tom&eacute; en Maloka (Bogot&aacute;).</p>
                     </div>
                     <div class="timeline-footer">
                         <p class="text-right">2005</p>
@@ -142,7 +145,7 @@
                         <h4>Bachillerato</h4>
                     </div>
                     <div class="timeline-body">
-                        <p>A los 16 años, me gradue de bachiller de la Fundaci&oacute;n Instituto Tecnol&oacute;gico del Sur, en ese tiempo, no sab&iacute;a si estudiar Ingenier&iacute;a de Sistemas o Matem&aacute;ticas, por eso decid&iacute; probar ambas.</p>
+                        <p>A los 16 años, me gradu&eacute; de bachiller de la Fundaci&oacute;n Instituto Tecnol&oacute;gico del Sur. No sab&iacute;a si estudiar Ingenier&iacute;a de Sistemas o Matem&aacute;ticas, por eso decid&iacute; a hacer ambas.</p>
                     </div>
                     <div class="timeline-footer">
                         <p class="text-right">2011</p>
@@ -159,7 +162,7 @@
                         <h4>Pregrado</h4>
                     </div>
                     <div class="timeline-body">
-                        <p>Actualmente, estoy cursando ambos pregrado de Ingenier&iacute;a de Sistemas y Matem&aacute;ticas en la Universidad de los Andes.</p>
+                        <p>Actualmente, estoy cursando los dos pregrados de Ingenier&iacute;a de Sistemas y Matem&aacute;ticas en la Universidad de los Andes.</p>
                     </div>
                     <div class="timeline-footer">
                         <p class="text-right">Actualidad</p>
@@ -195,7 +198,7 @@
             <span class="text-muted">Mis</span>
             Habilidades.
         </h2>
-        <p class="lead" align="justify">Actualmente poseo conocimientos en l&oacute;gica aplicada y conocimientos base en la teor&iacute;a de complejidad computacional.<br> Los lenguajes que manejo son:</p>
+        <p class="lead" align="justify">Actualmente pose&oacute; conocimientos en l&oacute;gica aplicada y conocimientos base en la teor&iacute;a de complejidad computacional.<br> Los lenguajes que manejo son:</p>
         <ul class="lead">
             <li>Java</li>
             <li>LaTex</li>
@@ -203,7 +206,7 @@
             <li>HTML</li>
             <li>SQL</li>
         </ul>
-        <p class="lead" align="justify">Adicionalmente, estoy familiarizado el manejo de programas de la l&iacute;nea de Microsoft Office y Adobe Suit. Y he realizado un trabajo menor en el desarrollo de aplicaciones para Android</p>
+        <p class="lead" align="justify">Adicionalmente, estoy familiarizado con el manejo de programas de la l&iacute;nea de Microsoft Office y Adobe Suit. Y he realizado un trabajo menor en el desarrollo de aplicaciones para Android</p>
     </div>
 
     <hr class="featurette-divider" id="hobbies">
@@ -220,10 +223,10 @@
 
         <div class="col-md-6">
         <ul class="lead">
-            <li  align="justify"><span class="text-muted">Los videojuegos:</span><br> Me gusta jugarlos, también análizar las nuevas propuestas, formas, experiencia, e interfaces interactivas que se le puede ofrecer a un jugador.</li>
-            <li  align="justify"><span class="text-muted">Las artes marciales:</span><br> Me gusta mucho la disciplina y el concepto ofrecido en las artes marciales, me gusta analizar las t&eacute;cnicas y la filosof&iacute;a detras de ellas. Actualmente he practicado algunas t&eacute;cnicas en Karate, Taekwondo, y Kickboxing </li>
-            <li  align="justify"><span class="text-muted">Cine:</span><br> Si bien no es una actividad frecuente en m&iacute;, realmente disfruto ver pel&iacute;cula en compañ&iacute;a de amigos y familiares.</li>
-            <li  align="justify"><span class="text-muted">Robots:</span><br> Desde pequeño, me a llamado mucho esta rama de la ingenier&iacute;a y este gusto se conserva hasta la actualidad.</li>
+            <li  align="justify"><span class="text-muted">Los videojuegos:</span><br> Me gusta jugarlos, también analizar las nuevas propuestas, formas, experiencia, e interfaces interactivas que se le puede ofrecer a un jugador.</li>
+            <li  align="justify"><span class="text-muted">Las artes marciales:</span><br> Me gusta mucho la disciplina y el concepto ofrecido en las artes marciales, analizo las t&eacute;cnicas y la filosof&iacute;a detr&aacute;s de ellas. Actualmente he practicado algunas t&eacute;cnicas en Karate, Taekwondo, y Kickboxing </li>
+            <li  align="justify"><span class="text-muted">Cine:</span><br> Si bien no es una actividad frecuente en m&iacute;, realmente disfruto ver pel&iacute;culas en compañ&iacute;a de amigos y familiares.</li>
+            <li  align="justify"><span class="text-muted">Robots:</span><br> Desde pequeño, me ha llamado mucho la atenci&oacute;n esta rama de la Ingenier&iacute;a; y este gusto lo conservo en la actualidad.</li>
         </ul>
         </div>
 
@@ -263,6 +266,26 @@
 
 
     </div>
+
+    <hr class="featurette-divider" id="mario">
+
+
+
+    <!-- Third Featurette -->
+    <div class="featurette" >
+        <img class="featurette-image img-circle img-responsive pull-left" src="img/imag06.png">
+        <h2 class="featurette-heading">
+            <span class="text-muted">Homenaje a un </span>
+            Personaje
+            <span class="text-muted"> de mi </span>
+            infancia
+        </h2>
+
+        <object width="480" height="385"><param value="http://www.youtube.com/v/-bzpZ6NNllM&showsearch=0&rel=0&fs=1&autoplay=0&amp;ap=%2526fmt%3D18" name="movie" /><param value="window" name="wmode" /><param value="true" name="allowFullScreen" /><embed width="480" height="385" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/-bzpZ6NNllM&showsearch=0&fs=1&rel=0&autoplay=0&amp;ap=%2526fmt%3D18"></embed></object><br /><a href="http://www.youtube.com/watch?v=-bzpZ6NNllM" target="_blank">View on YouTube</a>
+
+
+    </div>
+
 
     <hr class="featurette-divider">
 
