--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a href="#info">Contacto</a>
                 </li>
                 <li>
-                    <a href="#mario">¡Homenaje Especial!</a>
+                    <a href="#e3">Homenaje Lo mejor E3</a>
                 </li>
             </ul>
         </div>
@@ -94,7 +94,7 @@
             <span class="text-muted">Acerca de</span>
             Nelson Andr&eacute;s S&aacute;nchez
         </h2>
-        <p class="lead"  align="justify">Soy un estudiante de Matem&aacute;ticas e Ingenier&iacute;a de Sistemas de la Universidad de los Andes (Colombia). Mis gustos se enfocan en el desarollo de la l&oacute;gica y algoritmia en inteligencia artificial y rob&oacute;tica.</p>
+        <p class="lead"  align="justify">Soy un estudiante de Matem&aacute;ticas, doble carrera con Ingenier&iacute;a de Sistemas y Computaci&oacute;n de la Universidad de los Andes (Colombia). Mis gustos se enfocan en el desarollo de la l&oacute;gica y algoritmia aplicada en inteligencia artificial, rob&oacute;tica, redes sociales, y desarrollo de videojuegos.</p>
     </div>
 
     <hr class="featurette-divider" id="edu">
@@ -201,12 +201,20 @@
         <p class="lead" align="justify">Actualmente pose&oacute; conocimientos en l&oacute;gica aplicada y conocimientos base en la teor&iacute;a de complejidad computacional.<br> Los lenguajes que manejo son:</p>
         <ul class="lead">
             <li>Java</li>
+            <li>C++</li>
+            <li>Javascript</li>
+            <li>HTML 5</li>
             <li>LaTex</li>
             <li>Matlab</li>
-            <li>HTML</li>
             <li>SQL</li>
         </ul>
-        <p class="lead" align="justify">Adicionalmente, estoy familiarizado con el manejo de programas de la l&iacute;nea de Microsoft Office y Adobe Suit. Y he realizado un trabajo menor en el desarrollo de aplicaciones para Android</p>
+        <p class="lead" align="justify">Adicionalmente, estoy familiarizado con el manejo de programas de la l&iacute;nea de Microsoft Office, Adobe Suit, Autodesk Suit, Windows Server, entre otros. Y he realizado un trabajo menor en el desarrollo de aplicaciones para Android.</p>
+        <p class="lead" align="justify">Idiomas que manejo: </p>
+        <ul class="lead">
+            <li>Espa&ntilde;ol: Lengua Materna</li>
+            <li>Ingl&eacute;s: Avanzado</li>
+            <li>Japon&eacute;s: B&aacute;sico</li>
+        </ul>
     </div>
 
     <hr class="featurette-divider" id="hobbies">
@@ -248,17 +256,17 @@
         <div class="row">
             <div class="col-md-1">
                 <p class="lead">Correo:</p>
-                <p class="lead">C&oacute;digo:</p>
+                <p class="lead">Usuario github:</p>
                 <p class="lead">Tel&eacute;fono:</p>
-                <p class="lead">Direcci&oacute;n:</p>
+                <p class="lead">Ubicaci&oacute;n:</p>
 
 
             </div>
             <div class="col-md-4">
-                <p class="lead">na.sanchez162@uniandes.edu.co</p>
-                <p class="lead">201216454</p>
-                <p class="lead">3########</p>
-                <p class="lead">Cra ######### (Bogot&aacute;, Colombia)</p>
+                <p class="lead">na.sanchez162@uniandes.edu.co,nasanchez162@gmail.com,nelsan705@hotmail.com</p>
+                <p class="lead">nasanchez162</p>
+                <p class="lead">+57 3188169383</p>
+                <p class="lead">Bogot&aacute;, Colombia</p>
 
             </div>
         </div>
@@ -267,7 +275,7 @@
 
     </div>
 
-    <hr class="featurette-divider" id="mario">
+    <hr class="featurette-divider" id="e3">
 
 
 
@@ -275,13 +283,13 @@
     <div class="featurette" >
         <img class="featurette-image img-circle img-responsive pull-left" src="img/imag06.png">
         <h2 class="featurette-heading">
-            <span class="text-muted">Homenaje a un </span>
-            Personaje
-            <span class="text-muted"> de mi </span>
-            infancia
+            <span class="text-muted">Homenaje a lo mejor del </span>
+            E3
+            <span class="text-muted"> del 2015 </span>
         </h2>
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BjDnN-cM51s" frameborder="0" allowfullscreen></iframe>
         <object width="480" height="385"><param value="http://www.youtube.com/v/-bzpZ6NNllM&showsearch=0&rel=0&fs=1&autoplay=0&amp;ap=%2526fmt%3D18" name="movie" /><param value="window" name="wmode" /><param value="true" name="allowFullScreen" /><embed width="480" height="385" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/-bzpZ6NNllM&showsearch=0&fs=1&rel=0&autoplay=0&amp;ap=%2526fmt%3D18"></embed></object><br /><a href="http://www.youtube.com/watch?v=-bzpZ6NNllM" target="_blank">View on YouTube</a>
+        
 
 
     </div>
