--- a/index.html
+++ b/index.html
@@ -254,8 +254,10 @@
         <br><br>
 
         <div class="row">
-            <div class="col-md-1">
+            <div class="col-md-4">
                 <p class="lead">Correo:</p>
+                <p class="lead"></p>
+                <p class="lead"></p>
                 <p class="lead">Usuario github:</p>
                 <p class="lead">Tel&eacute;fono:</p>
                 <p class="lead">Ubicaci&oacute;n:</p>
@@ -263,7 +265,9 @@
 
             </div>
             <div class="col-md-4">
-                <p class="lead">na.sanchez162@uniandes.edu.co,nasanchez162@gmail.com,nelsan705@hotmail.com</p>
+                <p class="lead">na.sanchez162@uniandes.edu.co</p>
+                <p class="lead">nasanchez162@gmail.com</p>
+                <p class="lead">nelsan705@hotmail.com</p>
                 <p class="lead">nasanchez162</p>
                 <p class="lead">+57 3188169383</p>
                 <p class="lead">Bogot&aacute;, Colombia</p>
@@ -288,7 +292,7 @@
             <span class="text-muted"> del 2015 </span>
         </h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/BjDnN-cM51s" frameborder="0" allowfullscreen></iframe>
-        <object width="480" height="385"><param value="http://www.youtube.com/v/-bzpZ6NNllM&showsearch=0&rel=0&fs=1&autoplay=0&amp;ap=%2526fmt%3D18" name="movie" /><param value="window" name="wmode" /><param value="true" name="allowFullScreen" /><embed width="480" height="385" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/-bzpZ6NNllM&showsearch=0&fs=1&rel=0&autoplay=0&amp;ap=%2526fmt%3D18"></embed></object><br /><a href="http://www.youtube.com/watch?v=-bzpZ6NNllM" target="_blank">View on YouTube</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-bzpZ6NNllM" frameborder="0" allowfullscreen></iframe>
         
 
 
