--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <br><br>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <p class="lead">Correo:</p>
                 <p class="lead"></p>
                 <p class="lead"></p>
@@ -305,7 +305,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Programaci&oacute;n con tecnolog&iacute;as Web - 2015</p>
+                <p>Universidad de los Andes - 2016</p>
             </div>
         </div>
     </footer>
