--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
 
         <div class="row">
             <div class="col-md-2">
-                <p class="lead">Correo:</p>
-                <p class="lead"></p>
-                <p class="lead"></p>
+                <p class="lead">Correo (1):</p>
+                <p class="lead">Correo (2):</p>
+                <p class="lead">Correo (3):</p>
                 <p class="lead">Usuario github:</p>
                 <p class="lead">Tel&eacute;fono:</p>
                 <p class="lead">Ubicaci&oacute;n:</p>
